--- a/style.css
+++ b/style.css
@@ -37,7 +37,8 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    color: #f0efea; /* Light green for hover effect */
+    color: #f0efea;
+    /* Light green for hover effect */
 }
 
 section {
@@ -57,8 +58,9 @@ h2 {
 
 .project-tile {
     position: relative;
-    width: 200px;
-    height: 250px; /* Adjust as needed */
+    width: 230px;
+    height: 300px;
+    /* Adjust as needed */
     background-color: #262626;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     transition: transform 0.5s;
@@ -66,7 +68,8 @@ h2 {
     perspective: 1000px;
 }
 
-.tile-front, .tile-back {
+.tile-front,
+.tile-back {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -89,8 +92,10 @@ h2 {
     text-align: center;
     color: white;
     font-size: 1.2em;
-    background-color: rgba(0, 0, 0, 0.75); /* Semi-transparent background */
-    padding: 5px 0; /* Adjust as needed */
+    background-color: rgba(0, 0, 0, 0.75);
+    /* Semi-transparent background */
+    padding: 5px 0;
+    /* Adjust as needed */
 }
 
 .tile-back {
@@ -105,33 +110,47 @@ h2 {
     transform: rotateY(180deg);
 }
 
-.experience-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    gap: 20px;
-    padding: 1em;
+.experience-section {
+    margin: 20px;
 }
 
-.experience-entry {
-    background-color: #333;
-    color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    padding: 15px;
+.experience-item {
     display: flex;
-    flex-direction: column;
     align-items: center;
+    margin-bottom: 20px;
 }
 
-.experience-photo {
-    width: 100%;
-    height: 200px; /* Adjust as needed */
-    object-fit: cover;
-    border-radius: 10px; /* Optional for rounded corners */
+.company-logo {
+    width: 50px;
+    /* Adjust as necessary */
+    height: 50px;
+    /* Adjust as necessary */
+    margin-right: 20px;
+    border-radius: 50%;
+    /* Makes the image round */
+    align-self: flex-start;
 }
 
-.experience-info {
-    text-align: center;
-    margin-top: 15px;
+.experience-details {
+    flex-grow: 1;
+    font-weight: bold;
+}
+
+.company-name {
+    font-weight: bold;
+}
+
+.experience-dates {
+    margin-left: 25px;
+    font-style: italic;
+    color: #666;
+}
+
+.experience-description {
+    margin-top: 5px;
+    margin-left: 25px;
+    font-style: italic;
+    color: #666;
 }
 
 
@@ -139,8 +158,10 @@ h2 {
 /* TIMELINE */
 .timeline {
     position: relative;
-    padding-left: 20px; /* Adjust space for the line */
-    border-left: 2px solid #4CAF50; /* Timeline line */
+    padding-left: 20px;
+    /* Adjust space for the line */
+    border-left: 2px solid #4CAF50;
+    /* Timeline line */
 }
 
 .timeline-event {
@@ -149,7 +170,8 @@ h2 {
 
 .event-date {
     font-weight: bold;
-    color: #4CAF50; /* Match timeline line color */
+    color: #4CAF50;
+    /* Match timeline line color */
 }
 
 .event-description {
@@ -160,8 +182,13 @@ h2 {
 
 /* Example of a simple fade-in animation */
 @keyframes fadeIn {
-    from { opacity: 0; }
-    to { opacity: 1; }
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
 }
 
 .container {
@@ -169,7 +196,9 @@ h2 {
 }
 
 @keyframes blink {
-    50% { border-color: transparent; }
+    50% {
+        border-color: transparent;
+    }
 }
 
 .typing-effect {
@@ -184,18 +213,23 @@ h2 {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 20px; /* Adjust gap between image and text as needed */
+    gap: 20px;
+    /* Adjust gap between image and text as needed */
 }
 
 .profile-image {
-    flex: 0 0 auto; /* Adjust size as needed */
-    width: 150px; /* Adjust size as needed */
-    height: 150px; /* Adjust size as needed */
+    flex: 0 0 auto;
+    /* Adjust size as needed */
+    width: 150px;
+    /* Adjust size as needed */
+    height: 150px;
+    /* Adjust size as needed */
     border-radius: 50%;
     object-fit: cover;
 }
 
 .about-text {
     flex: 1;
-    max-width: 600px; /* Adjust as needed */
+    max-width: 600px;
+    /* Adjust as needed */
 }
